Fix on the footer with the collapse

--- a/src/Components/Collapse/Collapse.css
+++ b/src/Components/Collapse/Collapse.css
@@ -23,9 +23,8 @@
 .collapse-toggle {
     background-color: var(--light-grey);
     border-radius: 10px;
-    transition: all 400ms ease-in-out;
     opacity: 0;
-    visibility: hidden;
+    transition: all 400ms ease-in-out;
     color: var(--main);
     font-size: 18px;
     font-weight: 400;
@@ -47,5 +46,4 @@
 .collapse-toggle-animated {
     transition: all 400ms ease-in-out;
     opacity: 1;
-    visibility: visible;
 }
